# pgr_fmm

./: ANONYMITY_NOTICE.txt  CMakeLists.txt  LICENSE  README.md  build.sh  run_pgr.py
apps/: PGRExportQuery  PGRLoadQuery  PGRSolve.py  PGR_cuda
data/: 3DBenchy_40000.xyz  Cup34_40000.xyz  LibertyBase_40000.xyz  LibertyBody_40000.xyz  Utah_teapot_40000.xyz  bunny_40000.xyz  column_40000.xyz  dragon_40000.xyz  eg07_dragon_original_40000.xyz  flower_40000.xyz  galera_40000.xyz  hand_40000.xyz  happy_40000.xyz  horse_40000.xyz  horse_centralcut_33692.xyz  horse_centralcut_39407.xyz  netsuke_40000.xyz  serapis_40000.xyz  tortuga_40000.xyz  xyzrgb_dragon_clean_40000.xyz  xyzrgb_statuette_40000.xyz  yoda_40000.xyz
results/Armadillo_40000/samples/: Armadillo_40000.xyz  Armadillo_40000_normalized.npy
results/Armadillo_40000/solve/: Armadillo_40000_k_7_min_0.0015_max_0.015_alpha_1.05_depth_min_1_depth_max_1_eval_grid.npy  Armadillo_40000_k_7_min_0.0015_max_0.015_alpha_1.05_depth_min_1_depth_max_1_grid_width.npy  Armadillo_40000_k_7_min_0.0015_max_0.015_alpha_1.05_depth_min_1_depth_max_1_isoval.txt  Armadillo_40000_k_7_min_0.0015_max_0.015_alpha_1.05_depth_min_1_depth_max_1_lse.npy  Armadillo_40000_k_7_min_0.0015_max_0.015_alpha_1.05_depth_min_1_depth_max_1_lse.xyz
results/angel_40000/recon/: angel_40000_k_7_min_0.0015_max_0.015_alpha_1.05_depth_min_1_depth_max_1_recon.ply
results/angel_40000/samples/: angel_40000.xyz  angel_40000_normalized.npy
src/: Geometry.cpp  Octnode.cpp  Octnode.h  PGRExportQuery.cpp  PGRLoadQuery.cpp
utils/: io.py  solver.py
(+5 files in other folders)
